<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.morsecodeapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_morse"
            android:name="com.example.morsecodeapp.ui.morse.MorseFragment"
            android:label="@string/title_morse"
            tools:layout="@layout/fragment_morse"/>

    <fragment
        android:id="@+id/navigation_english"
        android:name="com.example.morsecodeapp.ui.english.EnglishFragment"
        android:label="@string/title_english"
        tools:layout="@layout/fragment_english"/>

</navigation>