<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.morse.MorseFragment">

    <LinearLayout
            android:id="@+id/txtLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3">

        <ScrollView
                android:id="@+id/scrollMorseTranslate"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:fadeScrollbars="false"
                android:scrollbarSize="@dimen/activity_scroller_size"
                android:fillViewport="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <TextView
                        android:id="@+id/txtMorseTranslate"
                        android:hint="@string/morse_translate_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:paddingBottom="20dp"/>
        </ScrollView>

        <ScrollView
                android:id="@+id/scrollMorseMsg"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:fadeScrollbars="false"
                android:scrollbarSize="@dimen/activity_scroller_size"
                android:fillViewport="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <TextView
                    android:id="@+id/txtMorseMsg"
                    android:hint="@string/morse_msg_hint"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:paddingBottom="20dp"/>
        </ScrollView>
    </LinearLayout>

    <Button
            android:id="@+id/btnMorsePush"
            android:text="@string/morse_push"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="90dp"
            app:layout_constraintTop_toBottomOf="@id/txtLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
            android:id="@+id/btnLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btnMorsePush"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1">

        <Button
                android:id="@+id/btnMorseDelete"
                android:text="@string/morse_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"/>

        <Button
                android:id="@+id/btnMorseEnter"
                android:text="@string/morse_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>